[metadata]
name = healsparse
description = Sparse healpix maps and geometry library
long_description = file: long_description.md
long_description_content_type = text/markdown
author = Eli Rykoff, Javier Sanchez, and the Dark Energy Science Collaboration
url = https://github.com/lsstdesc/healsparse
author_email = erykoff@stanford.edu
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
install_requires =
  numpy
  hpgeom>=1.2.0
  astropy
zip_safe = True

[options.extras_require]
test =
  pytest
  flake8
parquet =
  pyarrow>=5.0.0
healpy =
  healpy
fitsio =
  fitsio

[options.packages.find]
exclude =
  tests

[flake8]
max-line-length = 110
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W504
exclude =
  **/__init__.py,
  docs,
  build
